<resources>
    <string name="app_name">WarnMarket</string>
    <string name="errorEmptyFields">No puedes dejar los campos vacíos.</string>
    <string name="errorEmail">Introduce un email válido.</string>
    <string name="error_passwords">Las contraseñas no coinciden.</string>
    <string name="errorUserPass">Error, comprueba tu usuario o contraseña.</string>
    <string name="imageview_contentdescription">Fotografía de la oferta.</string>
    <string name="title_add_offer">Detalles de la oferta</string>
    <string name="title_add_image">Agregar imagen:</string>
    <string name="title_add_tags">Agrega algunas etiquetas:</string>
    <string name="price">Precio:</string>
    <string name="price_unity">Precio por unidad:</string>
    <string name="error_minimun_tags">Por favor, añade al menos 3 etiquetas.</string>
    <string name="error_empty_price">El precio no puede estar vacío.</string>
    <string name="error_empty_unity">Debes seleccionar alguna unidad de medida.</string>
    <string name="error_empty_image">Debes tomar una fotografía del producto.</string>
    <string name="error_empty_location">La localización no puede estar vacía.</string>
    <string-array name="unidades">
        <item>-</item>
        <item>kgr</item>
        <item>gr</item>
        <item>l</item>
        <item>ml</item>
        <item>unidad</item>
        <item>lavado</item>
        <item>docena</item>
        <item>cm^3</item>
    </string-array>
    <string-array name="unidades_receta">
        <item>-</item>
        <item>kgr</item>
        <item>gr</item>
        <item>l</item>
        <item>ml</item>
        <item>unidad(es)</item>
        <item>mitad(es)</item>
        <item>pizca</item>
        <item>cucharada</item>
        <item>cucharadita</item>
        <item>vaso</item>
        <item>taza</item>
    </string-array>
    <string name="add">+</string>
    <string name="repeated_tags">No puedes añadir etiquetas repetidas.</string>
    <string name="error_empty_market">El supermercado no puede estar vacío.</string>
    <string name="error_too_many_tags">Solo puedes añadir hasta un máximo de 10 etiquetas.</string>
    <string name="back_button"><![CDATA[<]]></string>
    <string name="next_button"><![CDATA[>]]></string>
    <string name="user_setting">Ajustes de usuario</string>
    <string name="report">Denunciar</string>
    <string name="delete">Borrar</string>
    <string name="update">Editar</string>
</resources>